test/Fail/Issue1976-constraints.err
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  _6 = B : Set (blocked on _6)
  _2 = B : Set (blocked on _2)

Issue1976-constraints.agda:16.10-34.9: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  Issue1976-constraints.agda:16.10-11
  Issue1976-constraints.agda:24.10-11
  Issue1976-constraints.agda:27.3-9
  Issue1976-constraints.agda:30.10-11
  Issue1976-constraints.agda:34.3-9
